# insa-4ir-ai-lab2-template

./: Cargo.toml  README.md
src/: bench.rs  board.rs  eval.rs  main.rs  search.rs
