[package]
name = "ai-2048"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
hashbrown = "0.11"
colored = "3"
anyhow = "1.0"
rayon = "1.5"
num_cpus = "1.13"
clap = { version = "4.5.31", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
